# serializer version: 1
# name: test_binary_sensor[System Monitor Charging - attributes]
  ReadOnlyDict({
    'device_class': 'battery_charging',
    'friendly_name': 'System Monitor Charging',
  })
# ---
# name: test_binary_sensor[System Monitor Charging - state]
  'off'
# ---
# name: test_binary_sensor[System Monitor Process pip - attributes]
  ReadOnlyDict({
    'device_class': 'running',
    'friendly_name': 'System Monitor Process pip',
    'icon': 'mdi:cpu-64-bit',
  })
# ---
# name: test_binary_sensor[System Monitor Process pip - state]
  'on'
# ---
# name: test_binary_sensor[System Monitor Process python3 - attributes]
  ReadOnlyDict({
    'device_class': 'running',
    'friendly_name': 'System Monitor Process python3',
    'icon': 'mdi:cpu-64-bit',
  })
# ---
# name: test_binary_sensor[System Monitor Process python3 - state]
  'on'
# ---
